--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,13 @@
     <meta name="theme-color" content="#000000" />
     <title>React App</title>
   </head>
-
+  <style>
+    #root {
+      width:100vw;
+      height:100vh;
+      display: flex;
+    }
+  </style>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
